# pendulum

./: CMakeLists.txt  README.md
includes/: ball.hpp  constant.hpp  shader.hpp  trail.hpp
src/: main.cpp  trail.cpp
